@@ -31,7 +31,6 @@ import com.dabomstew.pkrandom.constants.Moves;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class MoveSynergy {
 
@@ -44,32 +43,28 @@ public class MoveSynergy {
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .map(mv -> mv.number).toList());
                 break;
             case Abilities.drought:
             case Abilities.desolateLand:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .map(mv -> mv.number).toList());
                 break;
             case Abilities.refrigerate:
                 if (pkType1 == Type.ICE || pkType2 == Type.ICE) {
                     synergisticMoves.addAll(moveList
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
-                            .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .map(mv -> mv.number).toList());
                 }
                 break;
             case Abilities.galeWings:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FLYING)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .map(mv -> mv.number).toList());
                 break;
             case Abilities.pixilate:
                 if (pkType1 == Type.FAIRY || pkType2 == Type.FAIRY) {
@@ -77,7 +72,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.aerilate:
@@ -86,7 +81,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.darkAura:
@@ -94,14 +89,14 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.DARK && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.fairyAura:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.FAIRY && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.steelworker:
             case Abilities.steelySpirit:
@@ -109,7 +104,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.STEEL && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.galvanize:
                 if (pkType1 == Type.ELECTRIC || pkType2 == Type.ELECTRIC) {
@@ -117,7 +112,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.type == Type.NORMAL && mv.category != MoveCategory.STATUS)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.electricSurge:
@@ -126,28 +121,28 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.type == Type.ELECTRIC && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.psychicSurge:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.PSYCHIC && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.grassySurge:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.GRASS && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.dragonsMaw:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
         }
 
@@ -155,41 +150,35 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getSoftAbilityMoveAntiSynergy(int ability, List<Move> moveList) {
         List<Integer> antiSynergisticMoves = new ArrayList<>();
 
-        switch(ability) {
-            case Abilities.drizzle:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Abilities.drought:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Abilities.mistySurge:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+        switch (ability) {
+            case Abilities.drizzle -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.type == Type.FIRE && mv.category != MoveCategory.STATUS)
+                    .map(mv -> mv.number)
+                    .toList());
+            case Abilities.drought -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.type == Type.WATER && mv.category != MoveCategory.STATUS)
+                    .map(mv -> mv.number)
+                    .toList());
+            case Abilities.mistySurge -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.type == Type.DRAGON && mv.category != MoveCategory.STATUS)
+                    .map(mv -> mv.number)
+                    .toList());
         }
 
         return moveList
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getHardAbilityMoveSynergy(int ability, Type pkType1, Type pkType2, List<Move> moveList,
@@ -232,7 +221,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.hitratio > 0 && mv.hitratio <= 80)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.ownTempo:
             case Abilities.tangledFeet:
@@ -260,7 +249,7 @@ public class MoveSynergy {
                                 (mv.statusMoveType == StatusMoveType.DAMAGE && mv.statusPercentChance < 100) ||
                         mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.swiftSwim:
             case Abilities.rainDish:
@@ -295,12 +284,12 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.hasSpecificStatChange(StatChangeType.ACCURACY, true))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category == MoveCategory.PHYSICAL && mv.hitratio == perfectAccuracy)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.guts:
                 synergisticMoves.add(Moves.facade);
@@ -310,7 +299,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.drought:
             case Abilities.desolateLand:
@@ -331,7 +320,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.isPunchMove)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.snowCloak:
             case Abilities.iceBody:
@@ -349,7 +338,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.acupressure);
                 break;
             case Abilities.adaptability:
@@ -357,14 +346,14 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS && (mv.type == pkType1 || mv.type == pkType2))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.skillLink:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.hitCount >= 3)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.sniper:
                 synergisticMoves.addAll(moveList
@@ -372,14 +361,14 @@ public class MoveSynergy {
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED ||
                                 mv.criticalChance == CriticalChance.GUARANTEED)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.magicGuard:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.mindBlown);
                 break;
             case Abilities.stall:
@@ -391,28 +380,28 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.analytic:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.power > 0 && mv.priority < 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.noGuard:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.hitratio > 0 && mv.hitratio <= 70)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.technician:
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> (mv.power >= 40 && mv.power <= 60) || mv.hitCount > 1)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.slowStart:
                 synergisticMoves.add(Moves.transform);
@@ -437,7 +426,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.recoilPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.jumpKick);
                 synergisticMoves.add(Moves.highJumpKick);
                 break;
@@ -446,7 +435,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusType == StatusType.SLEEP)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.sheerForce:
                 synergisticMoves.addAll(moveList
@@ -457,7 +446,7 @@ public class MoveSynergy {
                                 mv.statusMoveType == StatusMoveType.DAMAGE ||
                                 mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.contrary:
                 synergisticMoves.addAll(moveList
@@ -465,7 +454,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statChangeMoveType == StatChangeMoveType.DAMAGE_USER &&
                                 mv.statChanges[0].stages < 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.heavyMetal:
                 synergisticMoves.add(Moves.heatCrash);
@@ -481,7 +470,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.makesContact)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.regenerator:
                 synergisticMoves.add(Moves.uTurn);
@@ -493,7 +482,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.destinyBond);
                 synergisticMoves.add(Moves.encore);
                 synergisticMoves.add(Moves.reflect);
@@ -532,7 +521,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.banefulBunker);
                 break;
             case Abilities.liquidVoice:
@@ -541,7 +530,7 @@ public class MoveSynergy {
                             .stream()
                             .filter(mv -> mv.isSoundMove && mv.power > 0)
                             .map(mv -> mv.number)
-                            .collect(Collectors.toList()));
+                            .toList());
                 }
                 break;
             case Abilities.triage:
@@ -549,7 +538,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.absorbPercent > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.surgeSurfer:
                 synergisticMoves.add(Moves.electricTerrain);
@@ -560,7 +549,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.category == MoveCategory.STATUS &&
                                 (mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
         }
 
@@ -568,7 +557,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getHardAbilityMoveAntiSynergy(int ability, List<Move> moveList) {
@@ -581,7 +570,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.type == Type.FIRE &&
                                 mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 // fallthrough
             case Abilities.drizzle:
             case Abilities.sandStream:
@@ -603,7 +592,7 @@ public class MoveSynergy {
                                 mv.statChanges[0].type == StatChangeType.SPEED &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.psychUp);
                 antiSynergisticMoves.add(Moves.haze);
                 break;
@@ -613,7 +602,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.type == Type.WATER &&
                                 mv.category != MoveCategory.STATUS)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 // fallthrough
             case Abilities.drought:
                 antiSynergisticMoves.add(Moves.thunder);
@@ -632,7 +621,7 @@ public class MoveSynergy {
                                 mv.hasSpecificStatChange(StatChangeType.EVASION, true) ||
                                 mv.hasSpecificStatChange(StatChangeType.EVASION, false))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.damp:
                 antiSynergisticMoves.add(Moves.selfDestruct);
@@ -661,7 +650,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages < 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.contrary:
                 antiSynergisticMoves.addAll(moveList
@@ -670,7 +659,7 @@ public class MoveSynergy {
                                 mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                 mv.statChanges[0].stages > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.shellSmash);
                 break;
             case Abilities.lightMetal:
@@ -682,7 +671,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.rest);
                 break;
             case Abilities.psychicSurge:
@@ -690,7 +679,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.priority > 0))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Abilities.mistySurge:
                 antiSynergisticMoves.addAll(moveList
@@ -703,7 +692,7 @@ public class MoveSynergy {
                                 mv.statusType == StatusType.POISON ||
                                 mv.statusType == StatusType.TOXIC_POISON)))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 antiSynergisticMoves.add(Moves.rest);
                 break;
             case Abilities.grassySurge:
@@ -719,7 +708,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getStatMoveSynergy(Pokemon pk, List<Move> moveList) {
@@ -761,7 +750,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getStatMoveAntiSynergy(Pokemon pk, List<Move> moveList) {
@@ -796,7 +785,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getMoveSynergy(Move mv1, List<Move> moveList, int generation) {
@@ -811,7 +800,7 @@ public class MoveSynergy {
                     .stream()
                     .filter(mv -> mv.flinchPercentChance > 0 && mv.priority == 0)
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         if (mv1.flinchPercentChance > 0 && mv1.priority == 0) {
@@ -823,7 +812,7 @@ public class MoveSynergy {
                                     mv.statChangeMoveType == StatChangeMoveType.NO_DAMAGE_USER) &&
                                     mv.hasSpecificStatChange(StatChangeType.SPEED, true)))
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         if (mv1.statChanges[0].stages >= 2 || mv1.statChanges[1].type != StatChangeType.NONE) {
@@ -851,7 +840,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.isTrapMove))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 // fallthrough
             case Moves.poisonPowder:
             case Moves.poisonGas:
@@ -866,7 +855,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.category == MoveCategory.STATUS &&
                                 (mv.statusType == StatusType.POISON || mv.statusType == StatusType.TOXIC_POISON))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.protect:
             case Moves.detect:
@@ -880,7 +869,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statChanges[0].stages >= 2 || mv.statChanges[1].type != StatChangeType.NONE)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.shellSmash);
                 break;
             case Moves.willOWisp:
@@ -892,7 +881,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.hitratio <= 50))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.sunnyDay:
                 synergisticMoves.add(Moves.solarBlade);
@@ -909,7 +898,7 @@ public class MoveSynergy {
                                 (mv.hasSpecificStatChange(StatChangeType.ATTACK, false) ||
                                         mv.hasSpecificStatChange(StatChangeType.SPECIAL_ATTACK, false)))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.endure:
                 synergisticMoves.add(Moves.reversal);
@@ -921,7 +910,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS && mv.priority > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.thunderWave:
             case Moves.glare:
@@ -930,12 +919,12 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.flinchPercentChance > 0)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category == MoveCategory.STATUS && mv.statusType == StatusType.CONFUSION)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.hex);
                 break;
             case Moves.hail:
@@ -956,7 +945,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> (mv.isTrapMove))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.spikes:
             case Moves.stealthRock:
@@ -974,7 +963,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.criticalChance == CriticalChance.INCREASED)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.focusPunch:
             case Moves.dreamEater:
@@ -984,7 +973,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE &&
                                 mv.statusType == StatusType.SLEEP)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 break;
             case Moves.torment:
                 synergisticMoves.add(Moves.encore);
@@ -998,7 +987,7 @@ public class MoveSynergy {
                         .filter(mv -> mv.statusMoveType == StatusMoveType.NO_DAMAGE &&
                                 mv.statusType != StatusType.CONFUSION)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.banefulBunker);
                 break;
             case Moves.storedPower:
@@ -1006,7 +995,7 @@ public class MoveSynergy {
                         .stream()
                         .filter(mv -> mv.statChanges[0].stages > 1 || mv.statChanges[1].type != StatChangeType.NONE)
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
                 synergisticMoves.add(Moves.acupressure);
                 synergisticMoves.add(Moves.shellSmash);
                 break;
@@ -1025,7 +1014,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getSoftMoveSynergy(Move mv1, List<Move> moveList, int generation,
@@ -1041,39 +1030,34 @@ public class MoveSynergy {
                                 .stream()
                                 .filter(entry -> entry.getValue() == Effectiveness.DOUBLE)
                                 .map(Map.Entry::getKey)
-                                .collect(Collectors.toList());
+                                .toList();
                 synergisticMoves.addAll(moveList
                         .stream()
                         .filter(mv -> mv.category != MoveCategory.STATUS &&
                                 superEffectiveAgainstNVE.contains(mv.type))
                         .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         }
 
-        switch(mv1.number) {
-            case Moves.swordsDance:
-                synergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.category == MoveCategory.PHYSICAL)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Moves.nastyPlot:
-            case Moves.tailGlow:
-                synergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> mv.category == MoveCategory.SPECIAL)
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+        switch (mv1.number) {
+            case Moves.swordsDance -> synergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.category == MoveCategory.PHYSICAL)
+                    .map(mv -> mv.number)
+                    .toList());
+            case Moves.nastyPlot, Moves.tailGlow -> synergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> mv.category == MoveCategory.SPECIAL)
+                    .map(mv -> mv.number)
+                    .toList());
         }
 
         return moveList
                 .stream()
                 .filter(mv -> synergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getHardMoveAntiSynergy(Move mv1, List<Move> moveList) {
@@ -1087,43 +1071,38 @@ public class MoveSynergy {
                             (mv.statusType == mv1.statusType ||
                                     (mv1.statusType != StatusType.CONFUSION && mv.statusType != StatusType.CONFUSION))))
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
-        switch(mv1.number) {
-            case Moves.protect:
+        switch (mv1.number) {
+            case Moves.protect -> {
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
                 antiSynergisticMoves.add(Moves.kingsShield);
-                break;
-            case Moves.detect:
+            }
+            case Moves.detect -> {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
                 antiSynergisticMoves.add(Moves.kingsShield);
-                break;
-            case Moves.kingsShield:
+            }
+            case Moves.kingsShield -> {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.banefulBunker);
-                break;
-            case Moves.banefulBunker:
+            }
+            case Moves.banefulBunker -> {
                 antiSynergisticMoves.add(Moves.protect);
                 antiSynergisticMoves.add(Moves.detect);
                 antiSynergisticMoves.add(Moves.kingsShield);
-                break;
-            case Moves.returnTheMoveNotTheKeyword:
-                antiSynergisticMoves.add(Moves.frustration);
-                break;
-            case Moves.frustration:
-                antiSynergisticMoves.add(Moves.returnTheMoveNotTheKeyword);
-                break;
-            case Moves.leechSeed:
-            case Moves.perishSong:
+            }
+            case Moves.returnTheMoveNotTheKeyword -> antiSynergisticMoves.add(Moves.frustration);
+            case Moves.frustration -> antiSynergisticMoves.add(Moves.returnTheMoveNotTheKeyword);
+            case Moves.leechSeed, Moves.perishSong -> {
                 antiSynergisticMoves.add(Moves.whirlwind);
                 antiSynergisticMoves.add(Moves.roar);
                 antiSynergisticMoves.add(Moves.circleThrow);
                 antiSynergisticMoves.add(Moves.dragonTail);
-                break;
+            }
         }
 
         if (mv1.type != null) {
@@ -1145,7 +1124,7 @@ public class MoveSynergy {
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> getSoftMoveAntiSynergy(Move mv1, List<Move> moveList) {
@@ -1157,49 +1136,39 @@ public class MoveSynergy {
                     .stream()
                     .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == mv1.type))
                     .map(mv -> mv.number)
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         switch (mv1.number) {
-            case Moves.waterSport:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.FIRE))
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
-            case Moves.mudSport:
-                antiSynergisticMoves.addAll(moveList
-                        .stream()
-                        .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.ELECTRIC))
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+            case Moves.waterSport -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.FIRE))
+                    .map(mv -> mv.number)
+                    .toList());
+            case Moves.mudSport -> antiSynergisticMoves.addAll(moveList
+                    .stream()
+                    .filter(mv -> (mv.category != MoveCategory.STATUS && mv.type == Type.ELECTRIC))
+                    .map(mv -> mv.number)
+                    .toList());
         }
 
         return moveList
                 .stream()
                 .filter(mv -> antiSynergisticMoves.contains(mv.number))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<Move> requiresOtherMove(Move mv1, List<Move> moveList) {
         List<Integer> requiresMove = new ArrayList<>();
-        switch(mv1.number) {
-            case Moves.spitUp:
-            case Moves.swallow:
-                requiresMove.add(Moves.stockpile);
-                break;
-            case Moves.dreamEater:
-            case Moves.nightmare:
-                requiresMove.addAll(moveList
-                        .stream()
-                        .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
-                        .map(mv -> mv.number)
-                        .collect(Collectors.toList()));
-                break;
+        switch (mv1.number) {
+            case Moves.spitUp, Moves.swallow -> requiresMove.add(Moves.stockpile);
+            case Moves.dreamEater, Moves.nightmare -> requiresMove.addAll(moveList
+                    .stream()
+                    .filter(mv -> (mv.category == MoveCategory.STATUS && mv.statusType == StatusType.SLEEP))
+                    .map(mv -> mv.number)
+                    .toList());
         }
-        return moveList.stream().filter(mv -> requiresMove.contains(mv.number)).distinct().collect(Collectors.toList());
+        return moveList.stream().filter(mv -> requiresMove.contains(mv.number)).distinct().toList();
     }
 }
